# safe-sound

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Safe_Sound_Audio_Classifier.ipynb  app_manifest.json  azure_function.js
Hardware/inc/hw/: avnet_aesms_mt3620.h  safe_sound_hardware.h
SafeSound_app/: README.md  pubspec.yaml
SafeSound_app/android/: build.gradle
SafeSound_app/android/app/: build.gradle
SafeSound_app/android/app/src/main/: AndroidManifest.xml
SafeSound_app/android/app/src/main/kotlin/com/example/safe_sound_app/: MainActivity.kt
SafeSound_app/android/app/src/profile/: AndroidManifest.xml
SafeSound_app/ios/Runner/: Info.plist
SafeSound_app/ios/Runner.xcodeproj/: project.pbxproj
SafeSound_app/lib/: azure_iot_hub.dart  config_page.dart  control_page.dart  events_page.dart  main.dart
SafeSound_app/test/: widget_test.dart
SafeSound_code/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json
SafeSound_code/Hardware/: avnet_aesms_mt3620.json  mt3620.json  safe_sound_hardware.json
SafeSound_code/Hardware/inc/hw/: mt3620.h
SafeSound_code/inc/: azure_iot.h  common.h  event_utilities.h  process_audio.h
SafeSound_code/src/: azure_iot.c  common.c  epoll_timerfd_utilities.c  event_utilities.c  main.c  process_audio.c
inc/: azure_iot.h  classifier.h  common.h  event_utilities.h  featurizer.h  record_audio.h  window_break.h
src/: azure_iot.c  common.c  event_utilities.c  main.c  parson.c  process_audio.c  record_audio.c
